nginx (1.26.1+mod.1-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * nginx 1.26.1
  * update modules

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Sun, 02 Jun 2024 00:47:40 +0900

nginx (1.26.0+mod.1-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * nginx 1.26.0

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Wed, 24 Apr 2024 20:54:46 +0900

nginx (1.25.5+mod.1-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * nginx 1.25.5
  * 195a8b7b4fadbf1b0b1cb9f1a2007ddda7a7963f lua-resty-openssl (0.4.0-402-g195a8b7)

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Thu, 18 Apr 2024 17:20:14 +0900

nginx (1.25.4+mod.1-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * nginx 1.25.4
  * Update modules

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Wed, 21 Feb 2024 09:34:39 +0900

nginx (1.25.3+mod.5-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * Add ModSecurity-nginx module
  * d59e4ad121df702751940fd66bcc0b3ecb51a079 modules/ModSecurity-nginx (v1.0.3)

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Mon, 12 Feb 2024 14:17:41 +0900

nginx (1.25.3+mod.4-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * Update modules
  * 0deec9fd6f65d5e125bdb8dceb0d46ea50b4b019 nginx-var-limit-conn-module
  * 72945c33aee4643d9b195691ad25b0008acf541f nginx-var-limit-req-module

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Thu, 18 Jan 2024 13:47:07 +0900

nginx (1.25.3+mod.3-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * Update modules
  * 8ccb58ce08a99b41ce7fbe2ae114d73717a8818c nginx-var-limit-conn-module
  * 4f3682e69a63336d887d9cd0c4db5faa47865014 nginx-var-limit-req-module

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Thu, 18 Jan 2024 09:46:06 +0900

nginx (1.25.3+mod.2-1hn1DebRelDistrib) UNRELEASED; urgency=medium

  * Update module sources
  * Add module sources
  * 61acdab8791425cfcbff937bca9e0261f6a61db4 nginx-var-limit-conn-module
  * 3d8ebb0a03dbf19fe1f8fd894cccaf684732758c nginx-var-limit-req-module

 -- Hiroaki Nakamura <hnakamur@gmail.com>  Mon, 08 Jan 2024 11:28:09 +0900
