@@ -2,6 +2,7 @@ nginx (1.26.1+mod.1-1hn1DebRelDistrib) UNRELEASED; urgency=medium
 
   * nginx 1.26.1
   * update modules
+  * remove nginx-var-limit-{conn,req}-module
 
  -- Hiroaki Nakamura <hnakamur@gmail.com>  Sun, 02 Jun 2024 00:47:40 +0900
 
